--- a/less/modal.less
+++ b/less/modal.less
@@ -1,3 +1,70 @@
+html {
+  --primaryContentHeader: #185e9e;
+  --primaryTextColor: #4a4a4a;
+  --primaryContentBackground: #fff;
+  --primaryBorder: #d9d9d9;
+
+  --alertInfoBckground: #f7f7f7;
+  --linkColor: #004d93;
+  --deleteMsg: #d62238;
+
+  --mainListColor: #4e4d4e;
+  --mainListHover: #e2ecfd;
+  --subFrameColor: #e8e9ed;
+  --contentBackground: #f5f5f5;
+  --buttonSelectedColor: #001b34;
+
+  --formBackground: #fff;
+  --formInputBorderColor: #d9d9d9;
+  --formGroupBackground: #f2f2f2;
+
+  --paginationBtnColor: #5b5b5b;
+  --paginationBtnBackground: #fff;
+
+  --relationshipBackground: #e3f2f9;
+}
+html[data-theme='dark'] {
+  --primaryContentHeader: #069bda;
+  --primaryTextColor: #fff;
+  --primaryContentBackground: #1f1e1e;
+  --primaryBorder: #4b4b4b;
+
+  --alertInfoBckground: #333;
+  --linkColor: #069bda;
+  --deleteMsg: #fff;
+
+  --mainListColor: #fff;
+  --mainListHover: #000;
+  --subFrameColor: #0f0f0f;
+  --contentBackground: #1f1e1e;
+  --buttonSelectedColor: #069bda;
+
+  --formBackground: #474747;
+  --formInputBorderColor: #474747;
+  --formGroupBackground: #333;
+
+  --paginationBtnColor: #fff;
+  --paginationBtnBackground: #1a668c;
+
+  --relationshipBackground: #1f1e1e;
+}
+
+.c-modal {
+  .c-table {
+    thead tr {
+      color: var(--primaryContentHeader);
+      background-color: var(--primaryContentBackground);
+    }
+  }
+  .c-box {
+    & > header > i {
+      color: var(--primaryTextColor);
+    }
+    & > header:not(.legend) {
+      border-bottom: 1px solid var(--primaryBorder);
+    }
+  }
+}
 .c-gis {
   min-height: 500px;
   .actions {
@@ -13,10 +80,10 @@
 .table-sort-list {
   list-style-type: none;
   overflow: hidden;
-  color: #5b5b5b;
+  color: var(--primaryTextColor);
   padding: 5px;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: var(--primaryContentBackground);
+  border: 1px solid var(--primaryBorder);
   z-index: 10000;
   user-select: none;
   .fg-filter,
@@ -53,7 +120,8 @@
       width: 68%;
       word-wrap: break-word;
       .value-input {
-        background-color: #fff;
+        color: var(--primaryTextColor);
+        background-color: var(--primaryContentBackground);
         border: none;
         padding: 0;
       }
@@ -108,7 +176,7 @@
       &.delete {
         span {
           display: block;
-          color: #d62238;
+          color: var(--deleteMsg);
         }
       }
       li {
@@ -132,7 +200,7 @@
 #viewJsonDialog-dialog {
   .json-data {
     overflow-y: auto;
-    border: 1px solid #ccc;
+    border: 1px solid var(--primaryBorder);
     border-radius: 5px;
     height: 680px;
     & > li {
@@ -148,8 +216,8 @@
     bottom: 10px;
     .buttons {
       button {
-        color: #5b5b5b;
-        background-color: #fff;
+        color: var(--paginationBtnColor);
+        background-color: var(--paginationBtnBackground);
         float: left;
         margin-right: 10px;
         margin-top: 10px;
@@ -175,12 +243,12 @@
   padding: 0;
   header {
     font-size: 1.2em;
-    color: #185e9e;
+    color: var(--primaryContentHeader);
     font-weight: bold;
     padding: 15px;
   }
   .content {
-    color: #5b5b5b;
+    color: var(--primaryTextColor);
     label {
       display: block;
       margin-bottom: 3px;
@@ -197,7 +265,7 @@
       }
     }
     textarea {
-      border: 1px solid #d9d9d9;
+      border: 1px solid var(--primaryBorder);
     }
     .c-combobox {
       width: 100%;
@@ -205,7 +273,7 @@
     &.delete {
       span {
         display: block;
-        color: #d62238;
+        color: var(--deleteMsg);
         margin-top: 10px;
       }
     }
@@ -249,7 +317,7 @@
         }
       }
       &.border {
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid var(--primaryBorder);
       }
     }
   }
@@ -269,7 +337,7 @@
         li {
           margin-bottom: 5px;
           &.active {
-            color: blue;
+            color: var(--linkColor);
             text-decoration: underline;
             cursor: pointer;
           }
@@ -299,7 +367,8 @@
 #viewJsonDialog-dialog {
   header {
     font-size: 1.2em;
-    color: #185e9e;
+    color: var(--primaryContentHeader);
+    background-color: var(--primaryContentBackground);
     font-weight: bold;
     padding: 15px;
   }
@@ -407,10 +476,10 @@
   }
   .main-table {
     thead {
-      border-top: 1px solid #d9d9d9;
+      border-top: 1px solid var(--primaryBorder);
       tr {
-        color: #185e9e;
-        background-color: #f7f7f7;
+        color: var(--primaryContentHeader);
+        background-color: var(--primaryContentBackground);
       }
     }
     tbody {
@@ -426,9 +495,9 @@
     overflow: hidden;
     margin-top: 10px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--primaryBorder);
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: var(--formGroupBackground);
     .sync-status {
       margin-bottom: 10px;
       background-color: #d9d9d9;
@@ -479,10 +548,10 @@
       }
       .scan-content {
         margin-top: 10px;
-        border-top: 2px solid #ccc;
-        border-bottom: 2px solid #ccc;
+        border-top: 2px solid var(--primaryBorder);
+        border-bottom: 2px solid var(--primaryBorder);
         & > .header {
-          color: #185e9e;
+          color: var(--primaryContentHeader);
           font-weight: bold;
           padding: 5px 10px;
         }
@@ -492,15 +561,16 @@
         .list {
           overflow-y: auto;
           .group {
-            border-top: 1px solid #ccc;
+            border-top: 1px solid var(--primaryBorder);
             .path {
               padding: 5px 10px 8px 10px;
-              background-color: #fff;
+              color: var(--primaryTextColor);
+              background-color: var(--primaryContentBackground);
               cursor: pointer;
               i.fg {
                 float: left;
                 margin-right: 10px;
-                border: 1px solid #ccc;
+                border: 1px solid var(--primaryBorder);
                 border-radius: 5px;
                 &.rotate {
                   transform: rotate(180deg);
@@ -509,7 +579,7 @@
             }
             .rule {
               padding: 5px 45px;
-              border-top: 1px solid #ccc;
+              border-top: 1px solid var(--primaryBorder);
               .rule-content {
                 margin-bottom: 2px;
                 .header,
@@ -519,7 +589,7 @@
                   cursor: default;
                 }
                 .header {
-                  color: #185e9e;
+                  color: var(--primaryContentHeader);
                   span {
                     padding-left: 18px;
                     display: inline-block;
@@ -548,7 +618,7 @@
                     padding: 10px;
                     width: 20%;
                     li span {
-                      color: #185e9e;
+                      color: var(--primaryContentHeader);
                     }
                   }
                 }
@@ -572,7 +642,7 @@
         .scan-section {
           margin-bottom: 25px;
           padding: 10px;
-          border: 1px solid #ccc;
+          border: 1px solid var(--primaryBorder);
           border-radius: 10px;
           margin-bottom: 20px;
           .scan-header {
@@ -596,7 +666,8 @@
     width: 100%;
     overflow: hidden;
     thead tr {
-      color: #185e9e;
+      color: var(--primaryContentHeader);
+      background-color: var(--primaryContentBackground);
     }
     tbody td:hover {
       cursor: text;
@@ -604,7 +675,7 @@
     &.top-info {
       th, td {
         padding: 10px !important;
-        border: 1px solid #ccc !important;
+        border: 1px solid var(--primaryBorder) !important;
       }
       .align-center {
         text-align: center;
@@ -641,7 +712,7 @@
   }
   .alert-info {
     margin: 7px 0;
-    background-color: #f7f7f7;
+    background-color: var(--alertInfoBckground);
     padding: 20px;
   }
   .main-content {
@@ -649,31 +720,32 @@
     justify-content: space-between;
     margin-top: 10px;
     min-height: 400px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--primaryBorder);
     border-radius: 5px;
     & > .nav {
       width: 280px;
-      border-right: 1px solid #ccc;
+      border-right: 1px solid var(--primaryBorder);
       ul li {
         overflow: hidden;
-        color: #4e4d4e;
+        color: var(--mainListColor);
         font-size: 15px;
         font-weight: bold;
         padding: 10px;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid var(--primaryBorder);
+        background-color: var(--primaryContentBackground);
         cursor: pointer;
         &:hover {
-          background-color: #e2ecfd;
+          background-color: var(--mainListHover);
         }
         span {
           &.active {
-            color: #185e9e;
+            color: var(--primaryContentHeader);
           }
         }
         &.header {
           cursor: text;
           &:hover {
-            background-color: #fff;
+            background-color: var(--mainListHover);
           }
           .name {
             float: left;
@@ -687,10 +759,10 @@
         &.child {
           clear: both;
           padding-left: 20px;
-          background-color: #e8e9ed;
+          background-color: var(--subFrameColor);
           border: none;
           &:hover {
-            background-color: #e2ecfd;
+            background-color: var(--mainListHover);
           }
         }
       }
@@ -698,8 +770,8 @@
     & > .content {
       position: relative;
       width: 100%;
-      color: #666;
-      background-color: #f5f5f5;
+      color: var(--primaryTextColor);
+      background-color: var(--contentBackground);
       .options-buttons {
         position: absolute;
         top: 10px;
@@ -730,7 +802,7 @@
           position: absolute;
           top: 35px;
           right: 0;
-          border: 1px solid #ccc;
+          border: 1px solid var(--primaryBorder);
           border-radius: 5px;
           background-color: #fff;
           z-index: 100;
@@ -761,7 +833,7 @@
       .payload {
         padding: 0 10px;
         ul {
-          background-color: #f5f5f5 !important;
+          background-color: var(--contentBackground) !important;
         }
       }
       .srcIp-content,
@@ -778,7 +850,7 @@
             margin-bottom: 5px;
             .key {
               float: left;
-              color: #185e9e;
+              color: var(--primaryContentHeader);
               display: block;
             }
           }
@@ -851,7 +923,7 @@
     &.with-border {
       th, td {
         padding: 10px !important;
-        border: 1px solid #ccc !important;
+        border: 1px solid var(--primaryBorder) !important;
       }
     }
   }
@@ -892,7 +964,7 @@
     i {
       padding: 2px;
       margin: 0 2px;
-      border: 1px solid #ccc;
+      border: 1px solid var(--primaryBorder);
       border-radius: 5px;
     }
   }
@@ -999,7 +1071,7 @@
       width: 58%;
       min-height: 330px;
       &.border {
-        border: 1px solid #d9d9d9;
+        border: 1px solid var(--primaryBorder);
         border-radius: 5px;
       }
       .syslog-content {
@@ -1040,7 +1112,7 @@
       width: 40%;
       min-height: 450px;
       padding: 15px 15px 20px 15px;
-      border: 1px solid #d9d9d9;
+      border: 1px solid var(--primaryBorder);
       border-radius: 5px;
       &.no-padding {
         padding: 0;
@@ -1049,10 +1121,10 @@
   }
   .relationships {
     .group {
-      border: 1px solid #d9d9d9;
+      border: 1px solid var(--primaryBorder);
       border-radius: 5px;
       margin-top: 10px;
-      background-color: #e3f2f9;
+      background-color: var(--relationshipBackground);
     }
     .relationship {
       margin-top: 10px;
@@ -1090,7 +1162,7 @@
       height: 30px;
       width: 30px;
       margin-top: 10px;
-      background-color: white;
+      background-color: var(--primaryContentBackground);
     }
     .add {
       height: 30px;
@@ -1129,15 +1201,15 @@
     min-height: 20px;
     span {
       font-weight: bold;
-      color: #185e9e;
+      color: var(--primaryContentHeader);
     }
   }
   header {
     position: relative;
     padding: 10px;
     text-align: right;
-    border-bottom: 1px solid #ccc;
-    background-color: #f2f2f2;
+    border-bottom: 1px solid var(--primaryBorder);
+    background-color: var(--formGroupBackground);
     overflow: hidden;
     &.add-floor {
       text-align: left;
@@ -1145,15 +1217,15 @@
       color: #5b5b5b;
     }
     .fg {
-      color: #4a4a4a;
+      color: var(--primaryTextColor);
       font-size: 1.8em;
-      border: 1px solid #ccc;
+      border: 1px solid var(--primaryBorder);
       padding: 2px;
       border-radius: 5px;
       margin-left: 10px;
-      background-color: #fff;
+      background-color: var(--primaryContentBackground);
       &.active {
-        background-color: #001b34;
+        background-color: var(--buttonSelectedColor);
         color: #ffffff;
         cursor: default;
       }
@@ -1166,7 +1238,7 @@
   .left {
     float: left;
     width: 38%;
-    border: 1px solid #d9d9d9;
+    border: 1px solid var(--primaryBorder);
     border-radius: 5px;
     .display-tree {
       margin-top: 10px;
@@ -1176,7 +1248,7 @@
     float: right;
     width: 61%;
     padding: 0;
-    border: 1px solid #d9d9d9;
+    border: 1px solid var(--primaryBorder);
     border-radius: 5px;
     .field {
       float: left;
@@ -1185,7 +1257,7 @@
       label {
         font-size: 16px;
         font-weight: normal;
-        color: #4a4a4a;
+        color: var(--primaryTextColor);
       }
       &.upload {
         width: 235px;
