--- a/less/login.less
+++ b/less/login.less
@@ -13,7 +13,7 @@ html[data-theme='dark'] {
 
 #g-login {
   width: 100%;
-  background: linear-gradient(top, #001549, #72aaff);
+  background: linear-gradient(to top, #001549, #72aaff);
   &.config {
     position: relative;
     background: none;
