--- a/less/modal.less
+++ b/less/modal.less
@@ -698,12 +698,13 @@ html[data-theme='dark'] {
           width: 35%;
         }
         &.src-ip,
-        &.dest-ip {
-          width: 30%;
-        }
+        &.dest-ip,
         &.src-port,
         &.dest-port {
           width: 20%;
+        }
+        &.protocol {
+          width: 10%;
         }
       }
       .severity {
