--- a/less/login.less
+++ b/less/login.less
@@ -14,6 +14,11 @@ html[data-theme='dark'] {
 #g-login {
   width: 100%;
   background: linear-gradient(to top, #001549, #72aaff);
+  background-image: url('/images/scp-bg.jpg');
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   &.config {
     position: relative;
     background: none;
@@ -32,8 +37,12 @@ html[data-theme='dark'] {
   #title {
     color: #fff;
     margin-bottom: 5px;
+    img {
+      float: left;
+      margin-right: 10px;
+      margin-top: 12px;
+    }
     .title {
-      font-weight: bold;
       font-size: 2em;
     }
     .subtitle {
@@ -60,6 +69,7 @@ html[data-theme='dark'] {
       height: 40px;
     }
     button {
+      width: 100%;
       padding: 8px 43px;
     }
     .first-time {
