Update reference to image path.

--- a/less/login.less
+++ b/less/login.less
@@ -14,7 +14,7 @@ html[data-theme='dark'] {
 #g-login {
   width: 100%;
   background: linear-gradient(to top, #001549, #72aaff);
-  background-image: url('/images/scp-bg.jpg');
+  background-image: url('/SCP/images/scp-bg.jpg');
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
