Integrate Smart Attendance and iVAR in Dashboard and Alert dialog.

--- a/less/app.less
+++ b/less/app.less
@@ -759,7 +759,7 @@ i.c-checkbox.fg-checkbox {
   }
   .main-dashboard { //For Dashboard section
     height: 87vh;
-    overflow-y: auto;    
+    overflow-y: auto;
     padding: 15px;
     background-color: var(--primaryBackground);
     .charts {
@@ -777,6 +777,21 @@ i.c-checkbox.fg-checkbox {
         &.bar {
           width: 49.32%;
           height: 460px;
+        }
+        .main-table {
+          &.align-center {
+            tbody td {
+              text-align: center;
+              padding-left: 0;
+            }
+          }
+          &.ivr {
+            span {
+              color: #004d93;
+              font-weight: bold;
+              text-decoration: underline;
+            }
+          }
         }
         .empty-data {
           position: relative;
