--- a/less/modal.less
+++ b/less/modal.less
@@ -723,6 +723,20 @@ html[data-theme='dark'] {
     background-color: var(--alertInfoBckground);
     padding: 20px;
   }
+  .ivar {
+    display: flex;
+    align-items: center;
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      float: left;
+      margin-right: 15px;
+    }
+    .msg {
+      margin-right: 15px;
+    }
+  }
   .main-content {
     display: flex;
     justify-content: space-between;
