Remove global spinner for Statistics, Threats and Events page. Update HMD api with pageSize.

--- a/less/app.less
+++ b/less/app.less
@@ -935,6 +935,14 @@ i.c-checkbox.fg-checkbox {
         }
       }
     }
+    .loader-wrap {
+      text-align: center;
+      margin-top: 200px;
+      display: block;
+      .fg-loading-2 {
+        font-size: 30px;
+      }
+    }
   }
   .data-content {
     display: flex;
@@ -1742,7 +1750,7 @@ i.c-checkbox.fg-checkbox {
             display: block;
             text-align: center;
             margin-top: 160px;
-            i {
+            .fg-loading-2 {
               font-size: 30px;
             }
           }
