Combine HMD Scan File (AI) and Malware tabs into Scan File.

--- a/less/modal.less
+++ b/less/modal.less
@@ -602,6 +602,10 @@ html[data-theme='dark'] {
                     display: inline-block;
                     cursor: pointer;
                   }
+                  li span {
+                    padding-left: 0;
+                    cursor: default;
+                  }
                   .fg-play {
                     position: absolute;
                     top: 2px;
