--- a/less/modal.less
+++ b/less/modal.less
@@ -583,6 +583,10 @@ html[data-theme='dark'] {
                   transform: rotate(180deg);
                 }
               }
+              span.right {
+                float: right;
+                color: #b1b1b1;
+              }
             }
             .rule {
               padding: 5px 45px;
