--- a/less/app.less
+++ b/less/app.less
@@ -48,10 +48,11 @@ html {
   --formReadOnlyBackground: #eee;
   --formReadOnlyBorderColor: #d9d9d9;
   --formCheckRadioColor: #001b34;
-  --fadedColor: #fff;
 
   --gisMapBackground: #001b34;
   --laBackground: #fff;
+  --fadedColor: #fff;
+  --disabledColor: #ccc;
 }
 html[data-theme='dark'] {
   --primaryBackground: #000;
@@ -101,10 +102,11 @@ html[data-theme='dark'] {
   --formReadOnlyBackground: #666;
   --formReadOnlyBorderColor: #666;
   --formCheckRadioColor: #089bda;
-  --fadedColor: #999;
 
   --gisMapBackground: #1f1e1e;
   --laBackground: #333;
+  --fadedColor: #999;
+  --disabledColor: #666;
 }
 html, body, #app-container {
   font-family:"Segoe UI", "微軟正黑體", "新細明體";
@@ -1313,7 +1315,7 @@ i.c-checkbox.fg-checkbox {
                 display: flex;
                 margin: 0 5px 5px 5px;
                 padding: 10px;
-                border: 1px solid var(--leftNavBackground);
+                border: 1px solid var(--primaryBorder);
                 border-radius: 5px;
                 background-color: var(--primaryContentBackground);
                 &.narrow {
@@ -1327,7 +1329,7 @@ i.c-checkbox.fg-checkbox {
                       float: left;
                       margin-top: 1px;
                       margin-right: 5px;
-                      color: #ccc;
+                      color: var(--disabledColor);
                       &.active {
                         color: var(--primaryContentHeader);
                       }
@@ -1591,6 +1593,16 @@ i.c-checkbox.fg-checkbox {
                 .fg-close {
                   background-color: var(--formBackground);
                 }
+              }
+              &.severity-level {
+                .fg-recode {
+                  float: left;
+                  margin-right: 5px;
+                  margin-top: 5px;
+                }
+              }
+              #severityLevel {
+                width: 94.5%;
               }
               label {
                 text-align: left;
@@ -1906,7 +1918,8 @@ i.c-checkbox.fg-checkbox {
               &._tableMenu_ {
                 width: 1px;
               }
-              &._severity_ {
+              &._severity_,
+              &.severityLevel {
                 span.severity {
                   float: left;
                   color: #fff;
